--- a/functions/consumer/mongodb-consumer/README.adoc
+++ b/functions/consumer/mongodb-consumer/README.adoc
@@ -8,7 +8,7 @@ You can import `MongoDbConsumerConfiguration` in the application and then inject
 
 `Function<Message<?>, Mono<Void>> mongodbConsumerFunction` - Allows you to subscribe.
 
-`Consumer<Message<?>> mongodbConsumer` - Wraps the function with a blocking consumer.
+`Consumer<Message<?>> mongodbConsumer` - Wraps the function as a Consumer with no-op subscriber.
 
 You can use `mongodbConsumer` or `mongodbConsumerFunction` as a qualifier when injecting.
 
