--- a/spring-cloud-dataflow-apps-generator-plugin/README.adoc
+++ b/spring-cloud-dataflow-apps-generator-plugin/README.adoc
@@ -1,5 +1,6 @@
-= spring-cloud-stream-app-maven-plugin
-Maven plugin for generating spring cloud stream applications from the spring-cloud-stream-app-starters repository
+= spring-cloud-dataflow-apps-generator-plugin
+
+Maven plugin for generating spring cloud stream applications: https://github.com/spring-cloud/stream-applications
 
 == Build
 
@@ -10,9 +11,9 @@ mvn clean package [Requires JDK 8]
 [source, xml]
 ----
     <plugin>
-        <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-        <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
-        <version>2.0.1.BUILD-SNAPSHOT</version>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
         <configuration>
             <javaVersion>1.8</javaVersion>
             <bootVersion>${spring-boot.version}</bootVersion>
@@ -84,19 +85,16 @@ mvn clean package [Requires JDK 8]
     </plugin>
 ----
 
-The bom for stream apps is specified in spring-cloud-stream-app-dependencies
-(group id: org.springframework.cloud.stream.app)
+The `bom` for stream apps is specified in `spring-cloud-stream-app-dependencies` (group id: org.springframework.cloud.stream.app)
+and for tasks it is spring-cloud-task-app-dependencies (group id: org.springframework.cloud.task.app).
 
-and for tasks it is spring-cloud-task-app-dependencies
-(group id: org.springframework.cloud.task.app).
-
-Extra dependency management can be added as additional boms to the plugin using the property
--DbomsWithHigherPrecedence and value based on the pattern groupId:artfiactId:version. This can
+Extra dependency management can be added as additional `boms` to the plugin using the property
+`-DbomsWithHigherPrecedence` and value based on the pattern `groupId:artfiactId:version`. This can
  be a comma separated collection of boms. Any bom added like this will get priority in the order
  they are specified over any default values used in the plugin configuration.
 
- Spring Boot version used in the generated app can be overridden using the plugin property
- -DbootVersion=<spring boot version>.
+Spring Boot version used in the generated app can be overridden using the plugin property
+ `-DbootVersion=<spring boot version>`.
 
 
 ==== Copy Third-Party Resources
@@ -105,58 +103,57 @@ generated App Starter classpath.
 
 Form example if you want to copy a truststore and a self-signed certificate (`clientKeyStore.jks`, `cacerts`)  bundled inside the
 `org.springframework.cloud.stream.app:coap-app-starters-common:2.0.0.BUILD-SNAPSHOT` dependency you can add this to the
-`spring-cloud-stream-app-maven-plugin` configuration:
+`spring-cloud-dataflow-apps-generator-plugin` configuration:
 
 [source, xml]
 ----
-			<plugin>
-				<groupId>org.springframework.cloud.stream.app.plugin</groupId>
-				<artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
-				<configuration>
-					<generatedProjectHome>${session.executionRootDirectory}/apps</generatedProjectHome>
-					<generatedProjectVersion>${project.version}</generatedProjectVersion>
-					<bom>....</bom>
-					<generatedApps>
-						<coap-server-source/>
-					</generatedApps>
-					<copyResources>
-						<copyResource>
-                             <groupId>org.springframework.cloud.stream.app</groupId>
-                             <artifactId>coap-app-starters-common</artifactId>
-                             <version>2.0.0.BUILD-SNAPSHOT</version>
-                             <includes>clientKeyStore.jks,cacerts</includes>
-						</copyResource>
-					</copyResources>
-				</configuration>
-			</plugin>
-		</plugins>
+ <plugin>
+     <groupId>org.springframework.cloud</groupId>
+     <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
+     <configuration>
+         <generatedProjectHome>${session.executionRootDirectory}/apps</generatedProjectHome>
+         <generatedProjectVersion>${project.version}</generatedProjectVersion>
+         <bom>....</bom>
+         <generatedApps>
+             <coap-server-source/>
+         </generatedApps>
+         <copyResources>
+             <copyResource>
+                  <groupId>org.springframework.cloud.stream.app</groupId>
+                  <artifactId>coap-app-starters-common</artifactId>
+                  <version>2.0.0.BUILD-SNAPSHOT</version>
+                  <includes>clientKeyStore.jks,cacerts</includes>
+             </copyResource>
+         </copyResources>
+     </configuration>
+ </plugin>
 ----
 
 Later will add the following `maven-dependency-plugin` definition to the generated aps starter pom:
 
 [source, xml]
 ----
-      <plugin>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.springframework.cloud.stream.app</groupId>
-                  <artifactId>coap-app-starters-common</artifactId>
-                  <version>2.0.0.BUILD-SNAPSHOT</version>
-                  <includes>clientKeyStore.jks,cacerts</includes>
-                </artifactItem>
-              </artifactItems>
-              <outputDirectory>${project.build.directory}/classes/</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
+<plugin>
+  <artifactId>maven-dependency-plugin</artifactId>
+  <executions>
+    <execution>
+      <goals>
+        <goal>unpack</goal>
+      </goals>
+      <configuration>
+        <artifactItems>
+          <artifactItem>
+            <groupId>org.springframework.cloud.stream.app</groupId>
+            <artifactId>coap-app-starters-common</artifactId>
+            <version>2.0.0.BUILD-SNAPSHOT</version>
+            <includes>clientKeyStore.jks,cacerts</includes>
+          </artifactItem>
+        </artifactItems>
+        <outputDirectory>${project.build.directory}/classes/</outputDirectory>
+      </configuration>
+    </execution>
+  </executions>
+</plugin>
 ----
 
 This will ensure that the clientKeyStore.jks,cacerts files will be copied to the AppStarter's `BOOT-INF/classes/`
@@ -166,8 +163,8 @@ The `additionalAppProperties` configuration block permits adding of additional p
 [source, xml]
 ----
 <plugin>
-    <groupId>org.springframework.cloud.stream.app.plugin</groupId>
-    <artifactId>spring-cloud-stream-app-maven-plugin</artifactId>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-dataflow-apps-generator-plugin</artifactId>
     <configuration>
         <generatedProjectHome>${session.executionRootDirectory}/apps</generatedProjectHome>
         <generatedProjectVersion>${project.version}</generatedProjectVersion>
