--- a/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/README.adoc
+++ b/spring-cloud-dataflow-apps-generator-plugin/src/main/resources/template/README.adoc
@@ -1,1 +1,1 @@
-= Spring Cloud Stream {{#camelCase}}{{app.name}}{{/camelCase}} {{#capitalize}}{{app.type}}{{/capitalize}} {{#capitalize}}{{app-binder}}{{/capitalize}} Binder Application
+= Spring Cloud Stream {{#camelCase}}{{app.name}}{{/camelCase}} {{#capitalize}}{{app.type}}{{/capitalize}} {{#capitalize}}{{app-binder.name}}{{/capitalize}} Binder Application
