--- a/applications/processor/filter-processor/README.adoc
+++ b/applications/processor/filter-processor/README.adoc
@@ -16,6 +16,7 @@ If the incoming type is `byte[]` and the content type is set to `text/plain` or 
 == Options
 
 //tag::configuration-properties[]
+$$filter.function.expression$$:: $$A SpEL expression to apply.$$ *($$String$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
