--- a/applications/processor/filter-processor/README.adoc
+++ b/applications/processor/filter-processor/README.adoc
@@ -16,7 +16,7 @@ If the incoming type is `byte[]` and the content type is set to `text/plain` or 
 == Options
 
 //tag::configuration-properties[]
-$$filter.function.expression$$:: $$Boolean SpEL expression to apply against request message to filter.$$ *($$String$$, default: `$$true$$`)*
+$$filter.function.expression$$:: $$Boolean SpEL expression to apply against request message to filter.$$ *($$Expression$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
